--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "version": "1.0.0",
-  "description": "My webpack project",
-  "name": "my-webpack-project",
+  "description": "Icon webcomponent",
+  "name": "fieldgroup-icon",
+  "main": "dist/main.js",
   "scripts": {
     "build": "webpack",
     "serve": "webpack serve"
