adding debug modus

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/main.js",
   "scripts": {
     "build": "webpack",
+    "start": "npm run serve",
     "serve": "webpack serve"
   },
   "devDependencies": {
