--- a/package.json
+++ b/package.json
@@ -6,12 +6,21 @@
   "scripts": {
     "build": "webpack",
     "start": "npm run open && npm run serve",
+    "commit": "npx cz",
     "open": "[[ -x \"$(command  -v xdg-open)\" ]] && xdg-open http://localhost:8080 || open http://localhost:8080",
     "serve": "webpack serve"
   },
+  "browserslist": [
+    "last 2 versions",
+    "> 0.5%",
+    "not dead"
+  ],
   "devDependencies": {
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "commitizen": "^4.2.4",
     "css-loader": "^5.0.1",
+    "cz": "^1.8.2",
+    "cz-cc": "^1.0.1",
     "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^1.3.0",
     "node-sass": "^5.0.0",
@@ -27,5 +36,16 @@
   "dependencies": {
     "html-webpack-plugin": "^4.5.0",
     "lit-element": "^2.4.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-cc",
+      "maxHeaderLength": 100,
+      "questions": [
+        "type",
+        "scope",
+        "subject"
+      ]
+    }
   }
 }
